event pages done

--- a/intaglio-v3/HTML/events/chanakyaniti.html
+++ b/intaglio-v3/HTML/events/chanakyaniti.html
@@ -3,7 +3,7 @@
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Synergize - Intaglio 2017</title>
+        <title>ChanakyaNITI - Intaglio 2017</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
@@ -59,7 +59,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="event-name" href="#body">
-                                SYNERGIZE
+                                CHANAKYANITI
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -68,7 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
-                            <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODc0/SYNERGIZE_'>Register/Sign In</a></div>
+                            <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODcw/CHANAKYANITI'>Register/Sign In</a></div>
                         </div>
                     </div>
                     <!-- End Navbar Collapse -->
@@ -83,8 +83,8 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
-              <h3>“Collaborate, Conquer & Scale”</h3>
-              <p>Of the endless list of resources that a company owns, People are, by far, the most important resource for most companies. The role of HR has been looked down-upon for a long time. Things have come a long way since then. HR, like the rest of management, is an art as well as a science – One that uses analytical frameworks, bell shaped curves and so on. Intaglio’s HR event called – Synergize, invites students from across the country to tell their skills on various aspects of HR – from Role Management, recruitment, compensation management and so on.</p>
+              <h3>“Purity of the speech,of the mind,of the senses,and of the compassionate heart are needed by one who desires to rise to the divine platform.” - Chanakya</h3>
+              <p>The 21st century would belong to India and China is an oft-quoted statement but to prove it correct would require innovative and robust strategies formulation as well as execution. Chanakya NITI provides the platform to enable the young minds of the country to put themselves into the shoes of the policy-makers and provide viewpoints on policies like Employment, Cooperative federalism, Security policies, External affairs, Sustainable development, Farm Crisis, Railways to assist the government of the day.</p>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
@@ -92,19 +92,19 @@
                   <li>
                     <article><a href="#" class="icon"><i class="fa fa-glass"></i></a>
                       <h6 class="heading">ROUND 1</h6>
-                      <p>Online quiz to challenge aptitude, knowledge and logic.</p>
+                      <p>Online quiz based on questions about latest public policy affairs and issues.</p>
                     </article>
                   </li>
                   <li>
                     <article><a href="#" class="icon"><i class="fa fa-globe"></i></a>
                       <h6 class="heading">ROUND 2</h6>
-                      <p>Simulation / Case submission (Details to be revealed soon).</p>
+                      <p>Abstract submission on contemporary issues and policies. A suggestive list will be provided in time.</p>
                     </article>
                   </li>
                   <li>
                     <article><a href="#" class="icon"><i class="fa fa-shekel"></i></a>
                       <h6 class="heading">ROUND 3</h6>
-                      <p>Case submission and on-campus case presentation.</p>
+                      <p>Presentation on campus for shortlisted teams</p>
                     </article>
                   </li>
                 </ul>
@@ -113,22 +113,21 @@
                 <div class="clearfix poc">
                   <h4> Point of Contact </h4>
                   <ul>
+                    <li>Raveesh Rahul - +91-7044651864 (raveeshr2018@email.iimcal.ac.in)</li>
                     <li>Abhishek Paul - +91-8670252350 (abhishekp2018@email.iimcal.ac.in)</li>
-                    <li>Sumit Kathuria - +91-9899706085 (sumitk2018@email.iimcal.ac.in)</li>
                   </ul>
                 </div>
                 <div class="clearfix rules">
                   <h4> Rules </h4>
                   <ul>
-                    <li>Registration is allowed in teams of sizes 2 to 4</li>
-                    <li>Team members have to be from the same college</li>
+                    <li>Participants can register as individuals or in teams of 2</li>
                     <li>There is no limit to the number of entries from a college</li>
                     <li>Individuals can not be a part of more than one team</li>
                     <li>The decisions taken by the organisers are final</li>
                   </ul>
                 </div>
                 <div>
-                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;30K Cash Prize</span>
+                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;50K Cash Prize</span>
                 </div>
               </div>
             </div>
