--- a/intaglio-v3/HTML/events/lotl.html
+++ b/intaglio-v3/HTML/events/lotl.html
@@ -3,7 +3,7 @@
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Synergize - Intaglio 2017</title>
+        <title>Law of the Land - Intaglio 2017</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
@@ -59,7 +59,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="event-name" href="#body">
-                                SYNERGIZE
+                                LAW OF THE LAND
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -68,7 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
-                            <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODc0/SYNERGIZE_'>Register/Sign In</a></div>
+                            <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODcy/LAW_OF_THE_LAND'>Register/Sign In</a></div>
                         </div>
                     </div>
                     <!-- End Navbar Collapse -->
@@ -83,8 +83,8 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
-              <h3>“Collaborate, Conquer & Scale”</h3>
-              <p>Of the endless list of resources that a company owns, People are, by far, the most important resource for most companies. The role of HR has been looked down-upon for a long time. Things have come a long way since then. HR, like the rest of management, is an art as well as a science – One that uses analytical frameworks, bell shaped curves and so on. Intaglio’s HR event called – Synergize, invites students from across the country to tell their skills on various aspects of HR – from Role Management, recruitment, compensation management and so on.</p>
+              <h3>“The law is the public conscience” - Thomas Hobbes</h3>
+              <p>Business Law establishes guidelines for what firms can do and cannot do, but it takes skills and experience of the individual to interpret the business and the law, so as to act in the right way. Law and Business, today, are deeply intertwined and linked to the core. One cannot do without the other. Business Professionals, for certain decisions, require expertise in areas outside core business. Lawyers too, in addition to the legal expertise, are expected to garner a very deep understanding of their clients’ businesses. Law of the land - where Law meets Business – will test the ability of participants to understand and interpret the law in detail. Through the complex and real-life cases based on business law, the participants will have to deep dive into a client’s problems and look for the elusive solutions.</p>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
@@ -92,19 +92,19 @@
                   <li>
                     <article><a href="#" class="icon"><i class="fa fa-glass"></i></a>
                       <h6 class="heading">ROUND 1</h6>
-                      <p>Online quiz to challenge aptitude, knowledge and logic.</p>
+                      <p>Online Quiz-30-40 MCQs testing fundamentals of law from all domains. 30 teams to be shortlisted.</p>
                     </article>
                   </li>
                   <li>
                     <article><a href="#" class="icon"><i class="fa fa-globe"></i></a>
                       <h6 class="heading">ROUND 2</h6>
-                      <p>Simulation / Case submission (Details to be revealed soon).</p>
+                      <p>One page abstract submission (More details to be revealed soon)</p>
                     </article>
                   </li>
                   <li>
                     <article><a href="#" class="icon"><i class="fa fa-shekel"></i></a>
                       <h6 class="heading">ROUND 3</h6>
-                      <p>Case submission and on-campus case presentation.</p>
+                      <p>Case submission and on-campus presentation</p>
                     </article>
                   </li>
                 </ul>
@@ -113,7 +113,7 @@
                 <div class="clearfix poc">
                   <h4> Point of Contact </h4>
                   <ul>
-                    <li>Abhishek Paul - +91-8670252350 (abhishekp2018@email.iimcal.ac.in)</li>
+                    <li>Vivek Ranjan - +91-8302005032 (vivekr2018@email.iimcal.ac.in)</li>
                     <li>Sumit Kathuria - +91-9899706085 (sumitk2018@email.iimcal.ac.in)</li>
                   </ul>
                 </div>
