--- a/intaglio-v3/HTML/events/adsense.html
+++ b/intaglio-v3/HTML/events/adsense.html
@@ -3,7 +3,7 @@
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Consulting Knights - Intaglio 2017</title>
+        <title>Adsense - Intaglio 2017</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
@@ -23,7 +23,7 @@
         <link href="../vendor/swiper/css/swiper.min.css" rel="stylesheet" type="text/css"/>
 
         <!-- THEME STYLES -->
-        <link href="../css/layout.css" rel="stylesheet" type="text/css"/>
+        <!-- <link href="../css/layout.css" re  l="stylesheet" type="text/css"/> -->
 
         <!-- Favicon -->
         <link rel="icon" type="image/png" href="../img/matx-icon/favicon-16x16.png" sizes="16x16"/>
@@ -68,9 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
-                            <ul class="nav navbar-nav navbar-nav-right">
-                                <li id = 'regBtn' class="js_nav-item nav-item" style = 'background-color:#ed5a6a; cursor:pointer; padding-right: 15px;'><a class="nav-item-child nav-item-hover">Register/Sign In</a></li>
-                            </ul>
+                            <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY1/ADSENSE'>Register/Sign In</a></div>
                         </div>
                     </div>
                     <!-- End Navbar Collapse -->
@@ -89,31 +87,27 @@
               <p>Advertising plays a very critical role in the business world by enabling sellers to effectively compete with one another for the attention of buyers. Advertising is the best way to communicate to the customers. Advertising helps informs the customers about the brands available in the market and the variety of products useful to them. Adsense will test the candidates skill in how well they can advertise a product or a brand by applying the right on-ground execution strategies & marketing concepts.</p>
             </div>
             <div class="clearfix">
-              <div class="col-md-6">
-                <div class="clearfix details">
-                  <div class="col-md-1">
-                    <i class="fa fa-bullseye fa-2x" aria-hidden="true"></i>
-                  </div>
-                  <div class="col-md-11">
-                    Round 1: An online quiz comprising of questions from advertising concepts. Image based questions will also be there. It will comprise of 25 questions.
-                  </div>
-                </div>
-                <div class="clearfix details">
-                  <div class="col-md-1">
-                    <i class="fa fa-bullseye fa-2x" aria-hidden="true"></i>
-                  </div>
-                  <div class="col-md-11">
-                    Round 1: An online quiz comprising of questions from advertising concepts. Image based questions will also be there. It will comprise of 25 questions.
-                  </div>
-                </div>
-                <div class="clearfix details">
-                  <div class="col-md-1">
-                    <i class="fa fa-bullseye fa-2x" aria-hidden="true"></i>
-                  </div>
-                  <div class="col-md-11">
-                    Round 1: An online quiz comprising of questions from advertising concepts. Image based questions will also be there. It will comprise of 25 questions.
-                  </div>
-                </div>
+              <div class="col-md-6 split">
+                <ul class="nospace elements">
+                  <li>
+                    <article><a href="#" class="icon"><i class="fa fa-glass"></i></a>
+                      <h6 class="heading">ROUND 1</h6>
+                      <p>An online quiz comprising of questions from advertising concepts. Image based questions will also be there. It will comprise of 25 questions.</p>
+                    </article>
+                  </li>
+                  <li>
+                    <article><a href="#" class="icon"><i class="fa fa-globe"></i></a>
+                      <h6 class="heading">ROUND 2</h6>
+                      <p>A video-making competition where the top 20 shortlisted teams will be given a situation on which they have to make a video</p>
+                    </article>
+                  </li>
+                  <li>
+                    <article><a href="#" class="icon"><i class="fa fa-shekel"></i></a>
+                      <h6 class="heading">ROUND 3</h6>
+                      <p>An in-campus case presentation comprising of top 8-10 teams</p>
+                    </article>
+                  </li>
+                </ul>
               </div>
               <div class="col-md-6">
                 <div class="clearfix poc">
@@ -133,6 +127,9 @@
                     <li>The decisions taken by the organisers are final</li>
                   </ul>
                 </div>
+                <div>
+                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;35K Cash Prize</span>
+                </div>
               </div>
             </div>
           </div>
@@ -142,7 +139,6 @@
       <!--========== END FOOTER ==========-->
 
         <!-- Back To Top -->
-        <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
 
         <!-- JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
         <!-- CORE PLUGINS -->
