--- a/intaglio-v3/HTML/events/ck.html
+++ b/intaglio-v3/HTML/events/ck.html
@@ -1,51 +1,220 @@
 <!DOCTYPE html>
-<!--
-Template Name: Nonuxor
-Author: <a href="http://www.os-templates.com/">OS Templates</a>
-Author URI: http://www.os-templates.com/
-Licence: Free to use under our free template licence terms
-Licence URI: http://www.os-templates.com/template-terms
--->
-<html>
-<head>
-<title>Nonuxor</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
-</head>
-<body id="top">
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- Top Background Image Wrapper -->
-<div class="bgded overlay" style="background-image:url('images/ck/consultingknights1_840x560.jpg');height:650px;  ">
-  <!-- ################################################################################################ -->
-  <div class="wrapper row1">
-    <header id="header" class="hoc clear">
-      <!-- ################################################################################################ -->
-      <div id="logo" class="fl_left" style='margin-top: 17px;margin-left:-120px'>
-        <a href='#' style='font-size:28px;'>CONSULTING KNIGHTS</a>
-      </div>
-      <nav id="mainav" class="fl_right" style='margin-right:-120px'>
-        <a> "Business strategy is the battle-plan for a better future” – Patrick Dixon </a>
-      </nav>
-    </header>
-  </div>
-  <div id="pageintro" class="hoc clear">
-    <div class='overlay-bgd'>
-      
-    </div>
-    <div class="clear"></div>
-  </div>
-</div>
-<!-- End Top Background Image Wrapper -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
+<html lang="en" class="no-js">
+    <!-- BEGIN HEAD -->
+    <head>
+        <meta charset="utf-8"/>
+        <title>Consulting Knights - Intaglio 2017</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta content="width=device-width, initial-scale=1" name="viewport"/>
+        <meta content="" name="description"/>
+        <meta content="" name="author"/>
 
-<!-- JAVASCRIPTS -->
-<script src="layout/scripts/jquery.min.js"></script>
-<script src="layout/scripts/jquery.backtotop.js"></script>
-<script src="layout/scripts/jquery.mobilemenu.js"></script>
-</body>
+        <!-- GLOBAL MANDATORY STYLES -->
+        <link href="../fonts/font.css" rel="stylesheet" type="text/css">
+        <link href="../vendor/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css"/>
+        <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+        <!-- PAGE LEVEL PLUGIN STYLES -->
+        <link href="../css/animate.css" rel="stylesheet">
+        <link href="event.css" rel="stylesheet">
+        <link href="../vendor/swiper/css/swiper.min.css" rel="stylesheet" type="text/css"/>
+
+        <!-- THEME STYLES -->
+        <!-- <link href="../css/layout.css" re  l="stylesheet" type="text/css"/> -->
+
+        <!-- Favicon -->
+        <link rel="icon" type="image/png" href="../img/matx-icon/favicon-16x16.png" sizes="16x16"/>
+        <meta name="application-name" content="&nbsp;" />
+        <meta name="msapplication-TileColor" content="#FFFFFF" />
+        <meta name="msapplication-TileImage" content="img/matx-icon/tricolor.png"/>
+
+
+        <!-- <link rel="stylesheet" type="text/css" href="../css/main.css" /> -->
+    		<link rel="stylesheet" type="text/css" href="../css/slicebox.css" />
+    		<link rel="stylesheet" type="text/css" href="../css/custom.css" />
+    		<script type="text/javascript" src="../js/modernizr.custom.46884.js"></script>
+
+
+    </head>
+    <!-- END HEAD -->
+
+    <!-- BODY -->
+    <body id="body" data-spy="scroll" data-target=".header">
+
+        <!--========== HEADER ==========-->
+        <header class="header navbar-fixed-top">
+            <!-- Navbar -->
+            <nav class="navbar" role="navigation" style="height:71px">
+                <div class="container">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="menu-container js_nav-item">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="toggle-icon"></span>
+                        </button>
+
+                        <!-- Logo -->
+                        <div class="logo">
+                            <a class="event-name" href="#body">
+                                CONSULTING KNIGHTS
+                            </a>
+                        </div>
+                        <!-- End Logo -->
+                    </div>
+
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse nav-collapse">
+                        <div class="menu-container">
+                            <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY4/CONSULTING_KNIGHTS'>Register/Sign In</a></div>
+                        </div>
+                    </div>
+                    <!-- End Navbar Collapse -->
+                </div>
+            </nav>
+            <!-- Navbar -->
+        </header>
+        <!--========== END HEADER ==========-->
+
+        <!--========== SLIDER ==========-->
+        <div class = 'bgd-overlay'>
+          <!-- Indicators -->
+          <div class="container event-details">
+            <div class="clearfix">
+              <h3>"Business strategy is the battle-plan for a better future” – Patrick Dixon</h3>
+              <p>Strategy is about making choices, trade-offs; it’s about deliberately choosing to be different. Strategy is at the heart of every decision that organizations take to beat the competition. To win in the long run, strategy is no longer an option but the only answer. Consulting knights is here to judge your consulting skills! It challenges the participants with a comprehensive case developed with our corporate partners that tests the ability to deep dive into the problem and problem solve in a structured way to deliver effective and implementable solutions.</p>
+            </div>
+            <div class="clearfix">
+              <div class="col-md-6 split">
+                <ul class="nospace elements">
+                  <li>
+                    <article><a href="#" class="icon"><i class="fa fa-glass"></i></a>
+                      <h6 class="heading">ROUND 1</h6>
+                      <p>An online round that tests the participants’ business understanding and acumen for case analysis</p>
+                    </article>
+                  </li>
+                  <li>
+                    <article><a href="#" class="icon"><i class="fa fa-globe"></i></a>
+                      <h6 class="heading">ROUND 2</h6>
+                      <p>A case based round where teams will display their mettle by solving an intriguing business problem</p>
+                    </article>
+                  </li>
+                  <li>
+                    <article><a href="#" class="icon"><i class="fa fa-shekel"></i></a>
+                      <h6 class="heading">ROUND 3</h6>
+                      <p>The selected teams are then required to present their solution in front of our corporate partners on the final day</p>
+                    </article>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-md-6">
+                <div class="clearfix poc">
+                  <h4> Point of Contact </h4>
+                  <ul>
+                    <li>Preksha Kardam - +91-9958537806 (prekshak2018@email.iimcal.ac.in)</li>
+                    <li>Sovan Nayak - +91-7763806924 (sovann2018@email.iimcal.ac.in)</li>
+                    <li>Hitesh Bahl - +91-9999729981 (hiteshb2018@email.iimcal.ac.in)</li>
+                  </ul>
+                </div>
+                <div class="clearfix rules">
+                  <h4> Rules </h4>
+                  <ul>
+                    <li>Registration is allowed in teams of sizes 2 to 4</li>
+                    <li>Team members have to be from the same college</li>
+                    <li>There is no limit to the number of entries from a college</li>
+                    <li>Individuals can not be a part of more than one team</li>
+                    <li>The decisions taken by the organisers are final</li>
+
+                  </ul>
+                </div>
+                <div>
+                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;60K Cash Prize</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--========== SLIDER ==========-->
+
+      <!--========== END FOOTER ==========-->
+
+        <!-- Back To Top -->
+
+        <!-- JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
+        <!-- CORE PLUGINS -->
+        <script src="../vendor/jquery.min.js" type="text/javascript"></script>
+        <script src="../vendor/jquery-migrate.min.js" type="text/javascript"></script>
+        <script src="../vendor/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+
+        <!-- PAGE LEVEL PLUGINS -->
+        <script src="../vendor/jquery.easing.js" type="text/javascript"></script>
+        <script src="../vendor/jquery.back-to-top.js" type="text/javascript"></script>
+        <script src="../vendor/jquery.smooth-scroll.js" type="text/javascript"></script>
+        <script src="../vendor/jquery.wow.min.js" type="text/javascript"></script>
+        <script src="../vendor/swiper/js/swiper.jquery.min.js" type="text/javascript"></script>
+        <script src="../vendor/masonry/jquery.masonry.pkgd.min.js" type="text/javascript"></script>
+        <script src="../vendor/masonry/imagesloaded.pkgd.min.js" type="text/javascript"></script>
+        <script src="../vendor/sign-up-login-form/js/index.js" type="text/javascript"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBsXUGTFS09pLVdsYEE9YrO2y4IAncAO2U"></script>
+
+        <!-- PAGE LEVEL SCRIPTS -->
+        <script src="../js/layout.js" type="text/javascript"></script>
+        <script src="../js/components/wow.min.js" type="text/javascript"></script>
+        <script src="../js/components/swiper.js" type="text/javascript"></script>
+        <script src="../js/components/masonry.min.js" type="text/javascript"></script>
+        <script src="../js/components/google-map.min.js" type="text/javascript"></script>
+        <script type="text/javascript" src="../vendor/VerticalShowcaseSlider/VerticalShowcaseSlider/js/slider.js"></script>
+        <script type="text/javascript" src="../js/jquery.slicebox.js"></script>
+
+        <script type="text/javascript">
+
+          // Get the modal
+          var modal = document.getElementById('myModal');
+
+          // Get the button that opens the modal
+          var btn = document.getElementById("regBtn");
+
+          // Get the <span> element that closes the modal
+          var span = document.getElementsByClassName("close")[0];
+
+          var navbar_color = document.getElementsByClassName('navbar')[0];
+
+          // When the user clicks on the button, open the modal
+          btn.onclick = function() {
+              modal.style.display = "block";
+              console.log(navbar_color);
+              // navbar_color.style.background = 'black'
+          }
+
+          // When the user clicks on <span> (x), close the modal
+          span.onclick = function() {
+              modal.style.display = "none";
+          }
+
+          // When the user clicks anywhere outside of the modal, close it
+          window.onclick = function(event) {
+              if (event.target == modal) {
+                  modal.style.display = "none";
+              }
+          }
+
+          registerEvent = function(ev) {
+            modal.style.display = "block";
+          }
+
+          changeOpacity = function(cond) {
+            if(cond) {
+              $('.ps-slides').css('opacity','0.7');
+            }
+            else
+              $('.ps-slides').css('opacity','1');
+
+          }
+
+
+    </script>
+    </body>
+    <!-- END BODY -->
 </html>
