event pages done

--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -648,9 +648,9 @@
                           <blockquote>
                             <em>Doing business without advertising is like winking at the dark. You know what you are doing, but nobody else does</em><br/><span class='author-right'> – Stuart Britt</span>
                           </blockquote>
-                          <img src = 'img/events/adsense.jpg' class='event-img img-responsive'></img>
+                          <img src = 'img/EventImages/ADSENSE.jpg' class='event-img img-responsive'></img>
                           <p style = 'padding: 10px; margin: 20px 10px 10px 10px;font-size: 15px;text-align: justify;color:black;font-weight: 500;'>Advertising is the best way to communicate to the customers. Adsense will test the candidates skill in how well they can advertise a product or a brand by applying the right on-ground execution strategies & marketing concepts. </p>
-                          <button class='btn btn-default pull-right margin-r-20' style='border: 3px solid black;' onclick="registerEvent('adsense')">Register</button>
+                          <button class='btn btn-default pull-right margin-r-20' style='border: 3px solid black;'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY1/ADSENSE' target='_blank' target='_blank' style='color:black'>Register</a></button>
                           <button class='btn btn-info pull-right margin-r-20' style='border-radius: 5px;padding: 8px 12px;'><a href='events/adsense.html' target='_blank' style='color:black'>More Details</a></button>
                       </div>
                       <h4 class='intag-event-section-h4'>Marketplace</h4>
@@ -658,9 +658,9 @@
                         <blockquote>
                           <em>You can’t just ask customers what they want and then try to give that to them. By the time you get it built, they’ll want something new.</em><br/><span class='author-right'>- Steve Jobs</span>
                         </blockquote>
-                        <img src = 'img/events/marketplace/marketplace1.jpg' class='event-img img-responsive'></img>
+                        <img src = 'img/EventImages/marketplace.jpg' class='event-img img-responsive'></img>
                         <p style = 'padding: 10px; margin: 20px 10px 10px 10px;font-size: 15px;text-align: justify;color:black;font-weight: 500;'> Good marketing is more than the 7Ps and fancy campaigns, it can change the face of a whole industry and put the firm ahead in the Marketplace. This event tests your ability to make a full proof marketing plan that can give Kotler a run for his money. It is a battle to create a marketing strategy that will revolutionize the monotony of the market. Only the best laid plans can survive the marketplace. </p>
-                        <button class='btn btn-default pull-right margin-r-20' style='border: 3px solid black;' onclick="registerEvent('marketplace')">Register</button>
+                        <button class='btn btn-default pull-right margin-r-20' style='border: 3px solid black;'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY0/MARKETPLACE' target='_blank' target='_blank' style='color:black'>Register</a></button>
                         <button class='btn btn-info pull-right margin-r-20' style='border-radius: 5px;padding: 8px 12px;'><a href='events/marketplace.html' target='_blank' style='color:black'>More Details</a></button>
                       </div>
                   </div>
@@ -672,10 +672,10 @@
                           <blockquote>
                             <em>How many millionaires do you know who have become wealthy by investing in savings accounts? I rest my case.</em><br/><span class='author-right'> - Robert G. Allen</span>
                           </blockquote>
-                          <img src = 'img/events/fingod/fingod1.jpg' class='event-img img-responsive'></img>
+                          <img src = 'img/EventImages/fingod.jpg' class='event-img img-responsive'></img>
                           <p style = 'padding: 10px; margin: 20px 10px 10px 10px;font-size: 15px;text-align: justify;color:black;font-weight: 500;'>FinGod explores two aspects of the financial system, Mergers & Acquisitions as well as the Derivatives world. Do you have what it takes to emerge victorious in this fast-paced, roller coaster ride?</p>
                           <!-- <a href = 'mailto:FinGod@email.iimcal.ac.in'><i class="fa fa-envelope pull-right margin-r-20" style='cursor:pointer' aria-hidden="true"></i></a> -->
-                          <button class='btn btn-default pull-right margin-r-20' style='border: 3px solid black;' onclick="registerEvent('fingod')">Register</button>
+                          <button class='btn btn-default pull-right margin-r-20' style='border: 3px solid black;'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODYw/FINGOD' target='_blank' target='_blank' style='color:black'>Register</a></button>
                           <button class='btn btn-info pull-right margin-r-20' style='border-radius: 5px;padding: 8px 12px;'><a href='events/fingod.html' target='_blank' style='color:black'>More Details</a></button>
                       </div>
                       <h4 class='intag-event-section-h4'>BizWorth</h4>
@@ -1717,10 +1717,9 @@
                     </div>
                     <div class="col-xs-12 col-sm-3 col-lg-4 footer-detail">
                         <p class="margin-b-0"><span style = 'font-weight:bold'> IIM Calcutta <span> &nbsp;&nbsp;&nbsp;&nbsp; <a href = 'mailto:intaglio@email.iimcal.ac.in'>intaglio@email.iimcal.ac.in</a></p>
-                        <i><a href="#" class="fa fa-twitter"></a></i>
-                        <i><a href="#" class="fa fa-youtube-square"></a></i>
-                        <i><a href="#" class="fa fa-facebook"></a></i>
-                        <i><a href="#" class="fa fa-instagram"></a></i>
+                        <i><a target='_blank' href="https://www.twitter.com/iimc_intaglio" class="fa fa-twitter"></a></i>
+                        <i><a target='_blank' href="https://www.facebook.com/iimc.intaglio" class="fa fa-facebook"></a></i>
+                        <i><a target='_blank' href="https://plus.google.com/105306966277821978384" class="fa fa-google-plus"></a></i><br/>
                         <button class="btn btn-info btn-sm" style = 'cursor:pointer;'><a href="brochure/brochure.pdf" download="brochure.pdf" style='color:black;'>Brochure</a></button>
                     </div>
                 </div>
