--- a/intaglio-v3/HTML/events/bizworth.html
+++ b/intaglio-v3/HTML/events/bizworth.html
@@ -85,6 +85,7 @@
             <div class="clearfix">
               <h3>"Price is what you pay. Value is what you get." - Warren Buffett</h3>
               <p>Valuation is an art but the first thing we learn is the science. We are told we should be approximately right rather than precisely wrong. Tabulating the price may be easy but proving that the business is worth it requires skill. Intaglio presents a unique opportunity to all those budding ‘Fin Zombies’ to prove their mettle as equity analysts, investment bankers and PE partners in a unique package of sorts.</p>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODYy/BIZWORTH'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
