--- a/intaglio-v3/HTML/events/chanakyaniti.html
+++ b/intaglio-v3/HTML/events/chanakyaniti.html
@@ -85,6 +85,7 @@
             <div class="clearfix">
               <h3>“Purity of the speech,of the mind,of the senses,and of the compassionate heart are needed by one who desires to rise to the divine platform.” - Chanakya</h3>
               <p>The 21st century would belong to India and China is an oft-quoted statement but to prove it correct would require innovative and robust strategies formulation as well as execution. Chanakya NITI provides the platform to enable the young minds of the country to put themselves into the shoes of the policy-makers and provide viewpoints on policies like Employment, Cooperative federalism, Security policies, External affairs, Sustainable development, Farm Crisis, Railways to assist the government of the day.</p>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODcw/CHANAKYANITI'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
