--- a/intaglio-v3/HTML/events/ck.html
+++ b/intaglio-v3/HTML/events/ck.html
@@ -85,6 +85,7 @@
             <div class="clearfix">
               <h3>"Business strategy is the battle-plan for a better future” – Patrick Dixon</h3>
               <p>Strategy is about making choices, trade-offs; it’s about deliberately choosing to be different. Strategy is at the heart of every decision that organizations take to beat the competition. To win in the long run, strategy is no longer an option but the only answer. Consulting knights is here to judge your consulting skills! It challenges the participants with a comprehensive case developed with our corporate partners that tests the ability to deep dive into the problem and problem solve in a structured way to deliver effective and implementable solutions.</p>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY4/CONSULTING_KNIGHTS'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
