--- a/intaglio-v3/HTML/events/curiosio.html
+++ b/intaglio-v3/HTML/events/curiosio.html
@@ -85,6 +85,7 @@
             <div class="clearfix">
               <h3>An understanding of the natural world and what’s in it is a source of not only great curiosity but great fulfilment” – David Attenborough</h3>
               <p>Neutrinos, Easter eggs, Joker-Voila! I have an answer! Think you can find out a link and connect the most random objects in the universe? Intaglio presents Curiosio to feed your inquisitive grey cells and keep then rejuvenated. Curiosio, an online quiz, will give the quizzers a set of questions to brainstorm over, use any means necessary and win cash prizes every week!</p>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODc2/CURIOSIO'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
