--- a/intaglio-v3/HTML/events/dataplay.html
+++ b/intaglio-v3/HTML/events/dataplay.html
@@ -83,9 +83,9 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
-              <h3>
-“Data will talk if you are willing to listen” - Jim Bergeson</h3>
+              <h3>“Data will talk if you are willing to listen” - Jim Bergeson</h3>
               <p>Data is like Diamond. It does not have any relevance when it is extracted. It’s raw and boring. Only once it is mined, processed, polished and looked at from certain angles & directions that it start looking good. For all Analytics enthusiasts out there, Intaglio brings to you its first ever systems event – DataPlay. As the name suggests, DataPlay would test the analytical ability of students, the skill to make sense out of raw data. The level gets tougher as teams progress, the problems become tricky and the solutions are not easy to locate. Get ready to swim in the oceans of data and locate the diamonds at the bottom of the ocean.</p>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODcz/DATAPLAY'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
