--- a/intaglio-v3/HTML/events/fingod.html
+++ b/intaglio-v3/HTML/events/fingod.html
@@ -85,6 +85,7 @@
             <div class="clearfix">
               <h3>“How many millionaires do you know who have become wealthy by investing in savings accounts? I rest my case.” - Robert G. Allen</h3>
               <p>The world of money is addictive and mesmerising. Be it personal, corporate or national, finance has always been at the top of our minds when it comes to decision making. FinGod explores two aspects of the financial system, Mergers & Acquisitions as well as the Derivatives world, both of which have been used to generate volumes of trade and wealth for individuals and corporations alike. Do you have what it takes to emerge victorious in this fast-paced, roller coaster ride?</p>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODYw/FINGOD'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
