--- a/intaglio-v3/HTML/events/launchpad.html
+++ b/intaglio-v3/HTML/events/launchpad.html
@@ -85,6 +85,7 @@
             <div class="clearfix">
               <h3>"No idea is so outlandish that it should not be considered with a searching but at the same time a steady eye." - Winston Churchill</h3>
               <p>Dreams are quintessential part of human psyche. India in recent times, given its vast demographic and cultural diversity and a strong growth story, provides an interesting opportunity for entrepreneurs. In this 30th edition, Intaglio acknowledges contribution of Indian entrepreneurs who have come and revolutionized the Indian market space – Anil Agarwal, Azim Premji, Kishore Biyani, Sunil Mittal, Dhirubhai Ambani and the list goes on. There are opportunities to be created and tapped and then there are the starry eyed youth who dream to make a difference – what is missing is a platform to connect the two. We at Intaglio provides the much awaited platform to all the budding entrepreneurs to grab the opportunity to present their ideas in front of our esteemed judging panel.</p>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODc3/LAUNCHPAD'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
