--- a/intaglio-v3/HTML/events/lotl.html
+++ b/intaglio-v3/HTML/events/lotl.html
@@ -85,6 +85,7 @@
             <div class="clearfix">
               <h3>“The law is the public conscience” - Thomas Hobbes</h3>
               <p>Business Law establishes guidelines for what firms can do and cannot do, but it takes skills and experience of the individual to interpret the business and the law, so as to act in the right way. Law and Business, today, are deeply intertwined and linked to the core. One cannot do without the other. Business Professionals, for certain decisions, require expertise in areas outside core business. Lawyers too, in addition to the legal expertise, are expected to garner a very deep understanding of their clients’ businesses. Law of the land - where Law meets Business – will test the ability of participants to understand and interpret the law in detail. Through the complex and real-life cases based on business law, the participants will have to deep dive into a client’s problems and look for the elusive solutions.</p>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODcy/LAW_OF_THE_LAND'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
