--- a/intaglio-v3/HTML/events/marketplace.html
+++ b/intaglio-v3/HTML/events/marketplace.html
@@ -85,6 +85,7 @@
             <div class="clearfix">
               <h3>"You can't just ask customers what they want and then try to give that to them. By the time you get it built, they'll want something new.” - Steve Jobs</h3>
               <p>Good marketing is more than the 7Ps and fancy campaigns, it can change the face of a whole industry and put the firm ahead in the Marketplace. This event tests your ability to make a full proof marketing plan that can give Kotler a run for his money. It is a battle to create a marketing strategy that will revolutionize the monotony of the Marketplace. Only the best laid plans can survive the marketplace.</p>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY0/MARKETPLACE'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
