--- a/intaglio-v3/HTML/events/modulus.html
+++ b/intaglio-v3/HTML/events/modulus.html
@@ -85,6 +85,7 @@
             <div class="clearfix">
               <h3>“One of the funny things about the stock market is that every time one person buys, another sells, and both think they are astute.” – William Feather</h3>
               <p>The world of trading has evolved beyond recognition over the last few decades. What comprised of paperwork and outcry is now HFT and algorithms. Witness the breath-taking pace of live trading floor and face the heat of constantly moving markets. Modulus is a premier markets-based event, involving multiple phases across asset classes to test the participant’s true command over trading strategies. Do you have it in you to make the next big trade?</p>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODYx/MODULUS'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
