--- a/intaglio-v3/HTML/events/mun.html
+++ b/intaglio-v3/HTML/events/mun.html
@@ -85,6 +85,7 @@
             <div class="clearfix">
               <h3>“People forget. We are here to act, We are here to deliver results. We are agents of change. Our job is to change the UN and through it, the world.” - Ban Ki Moon</h3>
               <p>The IIM Calcutta Model United Nations seeks to test the diplomacy & policy making ability of participants in various international and national current affairs. The third edition will continue in bringing out the discussion of contemporary issues like poverty, affect of global warming and even political issues like Brexit, Trump Rule and its implications to the forefront encouraging the participants to come up with sustainable solutions.</p>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODc1/IIMC_MUN_3.0'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
