--- a/intaglio-v3/HTML/events/oikonomics.html
+++ b/intaglio-v3/HTML/events/oikonomics.html
@@ -85,6 +85,7 @@
             <div class="clearfix">
               <h3>“The love of economy is the root of all virtue” - George Bernard Shaw</h3>
               <p>The first ever Economics based event of Intaglio, Oikonomics begins by evaluating the knowledge of basic economics and quickly takes off to testing your ability to think in all directions and think on the spot, and think at the global & political levels. The event gets complex when factors such as social ideology, geography, economic status and political stability interact, you have to take decisions, through which the monetary and economic policy of nations, group of nations and international bodies take shape.</p>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODcx/OIKONOMICS'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
