--- a/intaglio-v3/HTML/events/olympus.html
+++ b/intaglio-v3/HTML/events/olympus.html
@@ -85,6 +85,7 @@
             <div class="clearfix">
               <h3>“A hero is born among a hundred, a wise man is found among a thousand, but an accomplished one might not be found even among a hundred thousand men.” - Plato</h3>
               <p>The different facets of management have their own challenges and hurdles, but it takes a true leader to master all of them. The flagship event of Intaglio, Olympus will be the ultimate test for an individual through gruelling rounds of finance, strategy, marketing, analytics amongst other facets of management. Olympus is a hunt to glorify the one true leader from a galaxy of bright minds in the B-schools across the globe. Victory belongs to the most persevering, with a grit to shine across every dimension. An ultimate conglomeration of thrill, tingle & treat, Olympus will make a run at your swagger and smarts.</p>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODU5/OLYMPUS_-_THE_FLAGSHIP_EVENT'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
