--- a/intaglio-v3/HTML/events/operationalize.html
+++ b/intaglio-v3/HTML/events/operationalize.html
@@ -85,6 +85,7 @@
             <div class="clearfix">
               <h3>An ounce of performance is worth pounds of promises” - Mae West</h3>
               <p>The circulatory system of any company, the field of operations has always been subject to rapid technological innovation and dynamic processes. To synchronise the forecasts, supply, transportation, inventory levels and reverse transportation requires mammoth organisational and coordination skills that are not easy to master. All business operations depends on three words - people, product & profits. In the advent of digitisation & growth of e-commerce, it all depends on which organisation uses effective optimisation of resources. Widely revered among the intelligentsia across the country, this operations event carries a unique charm & prestige. Rising every year in relevance, stature and competitiveness, the state of affairs is always phenomenal. Operationalise presents a new paradigm and a vast pool of opportunities along with current & contemporary challenges in this domain. Operationalise challenges participants on the grounds of theory, puts them through a simulated supply chain environment and a corporate case study to test their abilities as operations managers. Efficiency mixed with effectiveness is the key to performing well.</p>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODYz/OPERATIONALISE'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
