--- a/intaglio-v3/HTML/events/quizzical.html
+++ b/intaglio-v3/HTML/events/quizzical.html
@@ -85,6 +85,7 @@
             <div class="clearfix">
               <h3>“The most important thing is to not stop questioning” – Albert Einstein</h3>
               <p>Quizzical is one of the most addictive and popular mind sports that commands great participation and viewership. Amidst the nail-biting tension and deafening silence, the best minds in the country battle out their wits to answer questions put forth by star quizmasters. The silence only is broken by enthusiastic & cheering crowd. Having been graced by renowned quizmasters like Derek O’ Brien, IIM Calcutta promises to host the quizzing event with full fervour and continue to be the most attractive event of Intaglio.</p>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY5/QUIZZICAL'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
