--- a/intaglio-v3/HTML/events/synergize.html
+++ b/intaglio-v3/HTML/events/synergize.html
@@ -85,6 +85,7 @@
             <div class="clearfix">
               <h3>“Collaborate, Conquer & Scale”</h3>
               <p>Of the endless list of resources that a company owns, People are, by far, the most important resource for most companies. The role of HR has been looked down-upon for a long time. Things have come a long way since then. HR, like the rest of management, is an art as well as a science – One that uses analytical frameworks, bell shaped curves and so on. Intaglio’s HR event called – Synergize, invites students from across the country to tell their skills on various aspects of HR – from Role Management, recruitment, compensation management and so on.</p>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODc0/SYNERGIZE_'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
