--- a/intaglio-v3/HTML/events/wotp.html
+++ b/intaglio-v3/HTML/events/wotp.html
@@ -85,6 +85,7 @@
             <div class="clearfix">
               <h3>"Without strategy execution is aimless, without execution strategy is useless" – Morris chang</h3>
               <p>Strategy formulation followed by its execution is what completes the analysis problem. Sports is that one area where you keep improvising your strategy along with executing those strategies. This event makes you test your managerial but sporting skills together. A fantasy football league with participating teams will join the league and compete against each other. So, put on your manager’s suit and take your team to the top! There are lots of prizes on offer.</p>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY3/WIZARDS_OFF_THE_PITCH'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
