--- a/intaglio-v3/HTML/events/eotm.html
+++ b/intaglio-v3/HTML/events/eotm.html
@@ -85,6 +85,7 @@
             <div class="clearfix">
               <h3>“The best of the group comes when everyone in the group does what’s best for himself and the group.” – John Nash</h3>
               <p>What’s the difference between a puzzle and real life? In real life, the interplay between multiple players influences the final outcome, thus making it dynamic unlike a puzzle. Come unleash the power of your mind and experience the effect of strategic decision making on real life events. Empires of the Mind is a multi-phase simulation event involving concepts of logical puzzle solving and game theory. Teams will be required to make strategic decisions in order to maximize gains for themselves as well as their teams, while cooperating and conflicting with other teams. It is said that your life is the sum of the choices that you make, and here we test you on a few of them.</p>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY2/EMPIRES_OF_THE_MIND'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
