--- a/intaglio-v3/HTML/events/ngo.html
+++ b/intaglio-v3/HTML/events/ngo.html
@@ -85,6 +85,7 @@
             <div class="clearfix">
               <h3>“Doing business without advertising is like winking at the dark. You know what you are doing, but nobody else does” – Stuart Britt</h3>
               <p>Advertising plays a very critical role in the business world by enabling sellers to effectively compete with one another for the attention of buyers. Advertising is the best way to communicate to the customers. Advertising helps informs the customers about the brands available in the market and the variety of products useful to them. Adsense will test the candidates skill in how well they can advertise a product or a brand by applying the right on-ground execution strategies & marketing concepts.</p>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY1/ADSENSE'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
